Added shooting area and animated asteriod and asteriod entities

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
+    <script type="text/javascript" src="./shooting_area.js"></script>
     <script type="text/javascript" src="./earth.js"></script>
+    <script type="text/javascript" src="./asteriod.js"></script>
+    <script type="text/javascript" src="./explosion.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
