--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" width="1024" height="768" style="background-image: url('space_background.png'); border: 1px solid black" tabindex="0" autofocus></canvas>
+    <canvas id="gameWorld" width="1024" height="768" style="background-image: url('Sprites/space_background.png'); border: 1px solid black" tabindex="0" autofocus></canvas>
 </body>
 </html>
