Added some instructions on the outside

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background-image: url('Sprites/space_background.png'); border: 1px solid black" tabindex="0" autofocus></canvas>
+    <h2>Use buttons: c, v, b, n</h2>
+    <h2>Currently a very unfinished space themed rhythm game</h2>
 </body>
 </html>
