--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <script type="text/javascript" src="entities/earth.js"></script>
     <script type="text/javascript" src="entities/asteriod.js"></script>
     <script type="text/javascript" src="entities/explosion.js"></script>
+    <script type="text/javascript" src="entities/health.js"></script>
+
 
 
     <script type="text/javascript" src="./main.js"></script>
