--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="./scenemanager.js"></script>
 
     <script type="text/javascript" src="levels/titlescreen.js"></script>
+    <script type="text/javascript" src="levels/losescreen.js"></script>
     <script type="text/javascript" src="levels/levels.js"></script>
 
 
