Fixed health bar bug and added a win screen

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     <script type="text/javascript" src="levels/titlescreen.js"></script>
     <script type="text/javascript" src="levels/losescreen.js"></script>
+    <script type="text/javascript" src="levels/winscreen.js"></script>
     <script type="text/javascript" src="levels/levels.js"></script>
 
 
