--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background-image: url('sprites/space_background.png'); border: 1px solid black" tabindex="0" autofocus></canvas>
     <h2>Use buttons: c, v, b, n</h2>
+    <h2>Still need to add the music and coordinate the notes</h2>
 
     <div>
         <br />
