--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./scenemanager.js"></script>
 
-    <script type="text/javascript" src="levels/titlescreen.js"></script>
-    <script type="text/javascript" src="levels/losescreen.js"></script>
-    <script type="text/javascript" src="levels/winscreen.js"></script>
-    <script type="text/javascript" src="levels/levels.js"></script>
+    <script type="text/javascript" src="./levels/titlescreen.js"></script>
+    <script type="text/javascript" src="./levels/losescreen.js"></script>
+    <script type="text/javascript" src="./levels/winscreen.js"></script>
+    <script type="text/javascript" src="./levels/levels.js"></script>
 
 
-    <script type="text/javascript" src="entities/shooting_area.js"></script>
-    <script type="text/javascript" src="entities/earth.js"></script>
-    <script type="text/javascript" src="entities/asteriod.js"></script>
-    <script type="text/javascript" src="entities/explosion.js"></script>
-    <script type="text/javascript" src="entities/health.js"></script>
+    <script type="text/javascript" src="./entities/shooting_area.js"></script>
+    <script type="text/javascript" src="./entities/earth.js"></script>
+    <script type="text/javascript" src="./entities/asteriod.js"></script>
+    <script type="text/javascript" src="./entities/explosion.js"></script>
+    <script type="text/javascript" src="./entities/health.js"></script>
 
 
 
