Renamed and rearranged files, updated win condition code to be less buggy

--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
     <script type="text/javascript" src="./levels/titlescreen.js"></script>
     <script type="text/javascript" src="./levels/losescreen.js"></script>
     <script type="text/javascript" src="./levels/winscreen.js"></script>
+    <script type="text/javascript" src="./levels/levelone.js"></script>
     <script type="text/javascript" src="./levels/levels.js"></script>
 
 
     <script type="text/javascript" src="./entities/shooting_area.js"></script>
     <script type="text/javascript" src="./entities/earth.js"></script>
-    <script type="text/javascript" src="./entities/asteriod.js"></script>
+    <script type="text/javascript" src="entities/asteroid.js"></script>
     <script type="text/javascript" src="./entities/explosion.js"></script>
     <script type="text/javascript" src="./entities/health.js"></script>
 
