Added intro cutscene

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script type="text/javascript" src="./levels/losescreen.js"></script>
     <script type="text/javascript" src="./levels/winscreen.js"></script>
     <script type="text/javascript" src="./levels/levelone.js"></script>
+    <script type="text/javascript" src="./levels/cutscene.js"></script>
     <script type="text/javascript" src="./levels/levels.js"></script>
 
 
@@ -55,8 +56,6 @@
 </head>
 <body>
     <canvas id="gameWorld" width="1024" height="768" style="background-image: url('sprites/space_background.png'); border: 1px solid black" tabindex="0" autofocus></canvas>
-    <h2>Use buttons: c, v, b, n</h2>
-    <h2>Still need to add the music and coordinate the notes</h2>
 
     <div>
         <br />
